--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Pitch Presentation to PDF",
-  "version": "0.0.0.1",
-  "description": "Export presentations from pitch.com as a PDF",
+  "version": "0.0.0.2",
+  "description": "Export presentations from Pitch.com as a PDF",
   "permissions": ["activeTab", "downloads", "tabs"],
   "action": {
     "default_popup": "popup.html",
